Update project to Java 11